        -- Address situation where a throwable during forceKillAcquires() left the force_kill_acquires flag
	   set to true, making it impossible for the pool to restart acquisition attempts on recovery. We
	   now unset the flag under any circumstance, but log interrupts or unexpected throwables, and make
	   a best effort to complete the intended expiration of waiting clients by throwing InterruptException
	   Many thanks to Stefan Cordes (rscadrde on github), Vipin Nair (swvist on github), and Łukasz Jąder
	   (ljader on github) for their work on this issue.
c3p0-0.9.5.3
	-- Address CVE-2018-20433, https://nvd.nist.gov/vuln/detail/CVE-2018-20433 re liberal parsing of
	   XML config. By default, c3p0 no longer expands entity references in XML config files. This
	   behavior can be overridden via config property 'com.mchange.v2.c3p0.cfg.xml.expandEntityReferences'
	   by applications that understand the security concerns but wish to make use of entity references.
	   Thanks to user zhutougg on GitHub for calling attention to and suggesting a fix for this issue.
	-- Upgrade dependency to mchange-commons-java 0.2.15, which includes support for log4j2 (implemented
	   in mchange-commons-java by GitHub user fireandfuel. Many thanks!

c3p0-0.9.5.2
	-- Fix a bug in MLog bridge to slf4j logging, in which loggability of levels of wrapped loggers
	   was misreported, leading to useless allocation of log Strings below the logging threshold. Grr.
	   [change is in mchange-commons-java 0.2.11]. Many thanks to Lewis Wong on Stack Exchange for calling
	   attention to this issue.
        -- Embed last acquistion failure as nested Exception in CannotAcquireResourceException. Thanks to 
	   nigam on github for this addition.
c3p0-0.9.5.1
	-- Implemented configuration property com.mchange.v2.c3p0.impl.DefaultConnectionTester.isValidTimeout
	   to define timeouts on tests based on Connection.isValid(...). Many thanks to james-hu on github
	   for suggesting this.